--- a/app/src/main/res/layout/layout_game_over.xml
+++ b/app/src/main/res/layout/layout_game_over.xml
@@ -94,7 +94,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="#e3a4b0"
+                android:textSize="60sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/view2"
                 app:layout_constraintEnd_toEndOf="@+id/view2"
                 app:layout_constraintStart_toStartOf="@+id/view2"
