--- a/app/src/main/res/layout/layout_game_over.xml
+++ b/app/src/main/res/layout/layout_game_over.xml
@@ -6,6 +6,7 @@
         android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#FFFFFF">
@@ -31,15 +32,16 @@
                 android:id="@+id/GameEndBtnView"
                 android:layout_width="115dp"
                 android:layout_height="65dp"
-                android:layout_marginStart="65dp"
                 android:background="#e3a4b0"
                 android:text="@string/game_over_finish"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline3" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline3"
+                app:layout_constraintRight_toRightOf="parent"/>
 
         <Button
                 android:id="@+id/OneMoreGameBtnView"
@@ -50,10 +52,11 @@
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.8"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/GameEndBtnView"
-                app:layout_constraintTop_toTopOf="@+id/guideline3" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline3"
+                app:layout_constraintRight_toRightOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
